Fixes misaligned search input field. Fixes #105

--- a/_sass/components/_search-results.scss
+++ b/_sass/components/_search-results.scss
@@ -30,6 +30,7 @@
         height: 1.95em;
         line-height: 1.8em;
         float: left;
+        margin: 0;
       }
     }
 
